Fix spacing issues and improve accessibility

--- a/src/tailwind.css
+++ b/src/tailwind.css
@@ -19,7 +19,11 @@ li.step:before {
 }
 
 li.step {
-  @apply mb-4 pl-0;
+  @apply pl-0;
+}
+
+li.step:not(:last-child) {
+  @apply mb-4;
 }
 
 ul.list-dash li:before {
